Initial commit of ITTC version of redkmer-hpc, after Wesley updated scripts 1-3 and configuration file to operate in the University of Kanasa ITTC HPC environment.

--- a/redkmer.cfg
+++ b/redkmer.cfg
@@ -4,16 +4,19 @@ printf "======= Running Redkmer =======\n"
 
 # ---------------------------------- Dataset specific configuration ---------------------------------------------------------------
 
+# create a tmp dir
+TMPDIR=$(mktemp -d -p /work/jwalters/redkmer-hpc/tmp)
+
 # path to the working directories
-BASEDIR=/work/USERNAME/redkmer-hpc
-CWD=/work/USERNAME/simulateddatasets/complex
+BASEDIR=/work/jwalters/redkmer-hpc
+CWD=/work/jwalters/redkmer-hpc/simulateddatasets/complex
 
 # path to the male pacbio data
-pacDIR=/work/USERNAME/simulateddatasets/complex/testreadspac
+pacDIR=/work/jwalters/redkmer-hpc/simulateddatasets/complex/testreadspac
 pacM=${pacDIR}/m_pac.fasta
 
 # path to the illumina data
-illDIR=/work/USERNAME/simulateddatasets/complex/testreadsill
+illDIR=/work/jwalters/redkmer-hpc/simulateddatasets/complex/testreadsill
 illM=${illDIR}/m.fastq
 illF=${illDIR}/f.fastq
 
