--- a/redkmer.cfg
+++ b/redkmer.cfg
@@ -8,23 +8,23 @@ printf "======= Running Redkmer =======\n"
 TMPDIR=$(mktemp -d -p /work/jwalters/redkmer-hpc/tmp)
 
 # path to the working directories
-BASEDIR=/work/jwalters/redkmer-hpc
-CWD=/work/jwalters/redkmer-hpc/tmp
+BASEDIR=/work/jwalters/redkmer-hpc  # This should point to the folder of redkmer you are currently working with
+CWD=/work/jwalters/redkmer-hpc/tmp  # Create a directory for collecting pipeline output, and give the path as CWD.
 
 # path to the male pacbio data
-pacDIR=/work/jwalters/redkmer-hpc/simulateddatasets/complex/testreadspac
-pacM=${pacDIR}/m_pac.fasta
+pacDIR=/work/jwalters/redkmer-hpc/tmp/testdata/pac   # path to the pacbio data
+pacM=${pacDIR}/HmelScaffs_partial.fas    # give the filename of the pacbio fasta, which is appended to the path variable
 
 # path to the illumina data
-illDIR=/work/jwalters/redkmer-hpc/simulateddatasets/complex/testreadsill
-illM=${illDIR}/m.fastq
-illF=${illDIR}/f.fastq
+illDIR=/work/jwalters/redkmer-hpc/tmp/testdata/ill  # path to the illumina data
+illM=${illDIR}/SRR1057595_10k-F.fastq    # filename of fastq data for heterogametic sex (Female for ZW). gzipped should be OK
+illF=${illDIR}/SRR1057594_10k-M.fastq    # filename of fastq data for homogametic sex (Male for ZW). gzipped should be OK
 
 # path to the mitochondrial Reference
-MtREF=${CWD}/refgenome/M.fasta
+MtREF=/work/jwalters/jwalters/references/Hmel2.5/Hmel_mtDNA.fa  # Path to mtDNA reference. 
 
 # path to genome assembly if available
-genome=${CWD}/refgenome/MaleGenome.fasta
+genome=/work/jwalters/jwalters/references/Hmel2.5/Heliconius_melpomene_melpomene_Hmel2.5.scaffolds.fa  # Seemingly not used in modules 1-3, so unimportant
 
 # bowtie number of bad bases to be ignored at the ends of illumina reads
 TRIMM5=0
@@ -65,7 +65,7 @@ minlog10sum=0
 # number of nodes to split the data and computation on
 NODES=10
 #number of cores of most powerful nodes
-CORES=24
+CORES=8
 #number of cores in most common node-type 
 ARRAYCORES=12
 BUFFERSIZE=20G
