updated modified config file for test conditions.

--- a/redkmer_mod.cfg
+++ b/redkmer_mod.cfg
@@ -5,23 +5,23 @@ printf "======= Running Redkmer =======\n"
 # ---------------------------------- Dataset specific configuration ---------------------------------------------------------------
 
 # create a tmp dir
-TMPDIR=$(mktemp -d -p /work/jwalters/redkmer-hpc/tmp)
+TMPDIR=/scratch/jwalters/redkmer_monarchHiFi/testtmp
 
 # path to the working directories
-BASEDIR=/work/jwalters/redkmer-hpc  # This should point to the folder of redkmer you are currently working with
-CWD=/work/jwalters/redkmer-hpc/tmp  # Create a directory for collecting pipeline output, and give the path as CWD.
+BASEDIR=/scratch/jwalters/redkmer_monarchHiFi/redkmer-ittc  # This should point to the folder of redkmer you are currently working with
+CWD=/scratch/jwalters/redkmer_monarchHiFi/redkmer-ittc/output  # Create a directory for collecting pipeline output, and give the path as CWD.
 
 # path to the male pacbio data
-pacDIR=/work/jwalters/redkmer-hpc/tmp/testdata/pac   # path to the pacbio data
-pacM=${pacDIR}/HmelScaffs_partial.fas    # give the filename of the pacbio fasta, which is appended to the path variable
+pacDIR=/scratch/jwalters/redkmer_monarchHiFi/data_test   # path to the pacbio data
+pacM=${pacDIR}/Q20_10kLines.fas.gz    # give the filename of the pacbio fasta, which is appended to the path variable
 
 # path to the illumina data
-illDIR=/work/jwalters/redkmer-hpc/tmp/testdata/ill  # path to the illumina data
-illM=${illDIR}/SRR1057595_10k-F.fastq    # filename of fastq data for heterogametic sex (Female for ZW). gzipped should be OK
-illF=${illDIR}/SRR1057594_10k-M.fastq    # filename of fastq data for homogametic sex (Male for ZW). gzipped should be OK
+illDIR=/scratch/jwalters/redkmer_monarchHiFi/data_test/illumina  # path to the illumina data
+illM=${illDIR}/C14F_10k.fq.gz    # filename of fastq data for heterogametic sex (Female for ZW). gzipped should be OK
+illF=${illDIR}/C14M_10k.fq.gz    # filename of fastq data for homogametic sex (Male for ZW). gzipped should be OK
 
 # path to the mitochondrial Reference
-MtREF=/work/jwalters/jwalters/references/Hmel2.5/Hmel_mtDNA.fa  # Path to mtDNA reference. 
+MtREF=/scratch/jwalters/redkmer_monarchHiFi/data_input/Dplex_mtDNA.fas  # Path to mtDNA reference. 
 
 # path to genome assembly if available
 genome=/work/jwalters/jwalters/references/Hmel2.5/Heliconius_melpomene_melpomene_Hmel2.5.scaffolds.fa  # Seemingly not used in modules 1-3, so unimportant
