Udpated config to use randomly generated tmp directories

--- a/redkmer_mod.cfg
+++ b/redkmer_mod.cfg
@@ -5,7 +5,7 @@ printf "======= Running Redkmer =======\n"
 # ---------------------------------- Dataset specific configuration ---------------------------------------------------------------
 
 # create a tmp dir
-TMPDIR=/scratch/jwalters/redkmer_monarchHiFi/testtmp
+TMPDIR=$(mktemp -d -p /scratch/jwalters/redkmer_monarchHiFi/testtmp)
 
 # path to the working directories
 BASEDIR=/scratch/jwalters/redkmer_monarchHiFi/redkmer-ittc  # This should point to the folder of redkmer you are currently working with
