--- a/redkmer_mod.cfg
+++ b/redkmer_mod.cfg
@@ -5,23 +5,23 @@ printf "======= Running Redkmer =======\n"
 # ---------------------------------- Dataset specific configuration ---------------------------------------------------------------
 
 # create a tmp dir
-TMPDIR=$(mktemp -d -p /scratch/jwalters/redkmer_monarchHiFi/testtmp)
+TMPDIR=$(mktemp -d -p /tmp)  # use $(mktemp -d -p /tmp) for local node temp storage, or specify other 
 
 # path to the working directories
 BASEDIR=/scratch/jwalters/redkmer_monarchHiFi/redkmer-ittc  # This should point to the folder of redkmer you are currently working with
-CWD=/scratch/jwalters/redkmer_monarchHiFi/redkmer-ittc/output  # Create a directory for collecting pipeline output, and give the path as CWD.
+CWD=${BASEDIR}/output  # Create a directory for collecting pipeline output, and give the path as CWD.
 
 # path to the male pacbio data
 pacDIR=/scratch/jwalters/redkmer_monarchHiFi/data_test   # path to the pacbio data
-pacM=${pacDIR}/Q20_10kLines.fas.gz    # give the filename of the pacbio fasta, which is appended to the path variable
+pacM=${pacDIR}/Q20_10kLines.fas.gz    # give the filename of the pacbio fasta (should be gzipped), which is appended to the path variable
 
 # path to the illumina data
 illDIR=/scratch/jwalters/redkmer_monarchHiFi/data_test/illumina  # path to the illumina data
-illM=${illDIR}/C14F_10k.fq.gz    # filename of fastq data for heterogametic sex (Female for ZW). gzipped should be OK
-illF=${illDIR}/C14M_10k.fq.gz    # filename of fastq data for homogametic sex (Male for ZW). gzipped should be OK
+illM=${illDIR}/C14F_10k.fq.gz    # filename of fastq data for heterogametic sex (Female for ZW). file should be gzipped
+illF=${illDIR}/C14M_10k.fq.gz    # filename of fastq data for homogametic sex (Male for ZW). file should be gzipped
 
 # path to the mitochondrial Reference
-MtREF=/scratch/jwalters/redkmer_monarchHiFi/data_input/Dplex_mtDNA.fas  # Path to mtDNA reference. 
+MtREF=/scratch/jwalters/redkmer_monarchHiFi/data_input/Dplex_mtDNA.fas  # Path to mtDNA reference. Not compressed.
 
 # path to genome assembly if available
 genome=/work/jwalters/jwalters/references/Hmel2.5/Heliconius_melpomene_melpomene_Hmel2.5.scaffolds.fa  # Seemingly not used in modules 1-3, so unimportant
@@ -30,12 +30,15 @@ genome=/work/jwalters/jwalters/references/Hmel2.5/Heliconius_melpomene_melpomene
 TRIMM5=0
 TRIMM3=0
 
+# allowable mismatches during bowtie mapping (-v option)
+VVAL=0
+
 # length cuttoff for pacBIO reads to be included in bins
 pac_length=2000
 pac_length_max=100000
 
 # length normalized sum of illumina reads mapping of pacBio reads cutoff
-LSum=50
+LSum=20
 
 #kmer X chromosome specificity index (0= no specificity; 1= full X specificity; 0.5= half of the kmer hits are on other chromosomes
 XSI=0.9
